@@ -6,6 +6,7 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
+import java.util.List;
 import java.util.stream.Stream;
 
 public class Ejercicio9 {
@@ -13,15 +14,26 @@ public class Ejercicio9 {
         String nombreFichero = MiEntradaSalida.leerLinea("Introduce el nombre del fichero: ");
 
         Path path = Path.of("src", "Boletin1", "Ejercicio9", nombreFichero);
+        Path pathSalida = Path.of("src", "Boletin1", "Ejercicio9", "MatriculasCorrectas.txt");
 
         if (!Files.exists(path) || !Files.isRegularFile(path)) {
             System.out.println("El fichero no existe o no es valido");
             return;
         }
-        try (Stream<String> lineas = Files.lines(path)) {
-        lineas.filter(l -> l.matches("\\p{L}+\\s\\d{4}-[B-Z&&[^EIOU]]{3}"));
 
-        Files.writeString(StandardOpenOption.CREATE, StandardOpenOption.APPEND);
+        String regex = "\\p{L}+\\s\\d{4}-[B-Z&&[^EIOU]]{3}";
+
+        try (Stream<String> lineas = Files.lines(path)) {
+        lineas.filter(m -> m.matches(regex)).forEach(m -> {
+            try {
+                Files.write(pathSalida, List.of(m),
+                    StandardOpenOption.CREATE, StandardOpenOption.APPEND);
+            } catch (IOException e) {
+                System.out.println(e.getMessage());
+            }
+        });
+
+            System.out.println("Proceso completado. Revisa MatriculasCorrectas.txt");
 
 
         } catch (IOException e) {
